--- a/slavetest/Jenkinsfile
+++ b/slavetest/Jenkinsfile
@@ -16,8 +16,10 @@ pipeline {
         stage('execute') {
             steps {
                 bat label: '', script:  '''git clone https://github.com/vsk-coding/helloworld.git
-                cd hellopython
-                python helloworld.py'''
+                cd hellworld
+                python helloworld.py
+                cd slavetest
+                python slave.py'''
             }
         }
     }
