--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,8 +5,7 @@
 sonar.projectKey-python-sonar-runner-simple
 sonar.projectName=sonar-demo
 
-sonar.sources=src
-sonar.language=python
+sonar.language=py
 #----- Default SonarQube server
 sonar.host.url=http://172.17.0.3:9000/
 
