--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@
 #No information about specific project should appear here
 
 
-sonar.projectKey-python-sonar-runner-simple
+sonar.projectKey=test
 sonar.projectName=sonar-demo
 
 sonar.language=py
