--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,12 +2,11 @@
 #No information about specific project should appear here
 
 
-sonar.projectKey=test
-sonar.projectName=sonar-demo
+sonar.projectKey=sample-test
 
 sonar.language=py
 #----- Default SonarQube server
-sonar.host.url=http://172.17.0.3:9000/
+#sonar.host.url=http://172.17.0.3:9000/
 
 #----- Default source code encoding
 sonar.sourceEncoding=UTF-8
