--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@
 
 sonar.projectKey=sample-test
 
-sonar.language=py
+sonar.language=java
 #----- Default SonarQube server
 #sonar.host.url=http://172.17.0.3:9000/
 
