--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@
 
 
 sonar.projectKey=sample-test
-sonar.projectName=sample
+sonar.projectName=sample-test-branch
 
 sonar.language=java
 #----- Default SonarQube server
